style: fix type sspacing using bulma classes on the about page

--- a/openstudio/src/App.css
+++ b/openstudio/src/App.css
@@ -2,11 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap");
 
 body {
-  /* background: linear-gradient(to bottom right, #f8b195, #355c7d); */
   background: #404040;
-
   margin: 0;
-  /* height: 100vh; */
+  min-height: 100vh;
   font-family: "Caveat", bold;
   font-optical-sizing: auto;
 }
@@ -23,14 +21,13 @@ body {
   background: linear-gradient(to bottom right, #f8b195, #355c7d);
 } */
 
-.ostudio-bk {
+/* .ostudio-bk {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #2a2a2a;
-}
+} */
 
 .os-content-bk {
   background-color: #2a2a2a;
@@ -38,7 +35,7 @@ body {
 }
 
 .os-subcontent-bk {
-  background-color: #666666;
+  background-color: #66666679;
   border-radius: 2%;
   padding: 1rem 0.75rem;
 }
