--- a/openstudio/src/styles/ArtworkDetailsComp.css
+++ b/openstudio/src/styles/ArtworkDetailsComp.css
@@ -9,9 +9,9 @@
   overflow-y: auto;
 }
 
-.tab-content {
+/* .tab-content {
   padding-bottom: 1rem;
-}
+} */
 
 .artwork-details-actions {
   margin-top: auto;
